# NeoELF

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  Readme.md  conanfile.txt
App/: CMakeLists.txt
App/source/: Main.cpp
Doc/: Lesson2.md  Lesson5.md  Lesson6.md  Lessons.md  api_doc.html
Doc/website/: BlendELF, 3D Game Engine.html  BlendELF, Lua API doc.html
Doc/website/BlendELF, 3D Game Engine-Dateien/: style.css  tommy_shot1_small.html
Doc/website/BlendELF, Lua API doc-Dateien/: donate.html
Editor/: LICENSE.txt  Readme.md  config.txt  init.lua
Editor/scripts/: attribute.lua  camera.lua  gui.lua  scene.lua  util.lua  widactor.lua  widcamera.lua  widcreate.lua  widentity.lua  widfile.lua  widfiles.lua  widlight.lua  widmaterials.lua  widoptions.lua  widparticles.lua  widphysics.lua  widshaft.lua  widtree.lua  winfiledialog.lua  winproperties.lua  wintoolbox.lua
Lib/: CMakeLists.txt
Lib/include/nelf/: Color.h  Config.h  Context.h  Directory.h  Engine.h  Face.h  Font.h  FramePlayer.h  General.h  Image.h  List.h  Log.h  MeshData.h  Object.h  PostProcess.h  Property.h  Random.h  RenderStation.h  Scripting.h  String.h  Vector.h  Vertex.h  bezierCurveType.h  directoryItemType.h  drawMode.h  errorCode.h  objectHeader.h  objectType.h  particleDrawMode.h
Lib/include/nelf/actor/: Actor.h  Camera.h  Particles.h
Lib/include/nelf/audio/: AudioDevice.h  AudioSource.h  DataDump.h  Sound.h  soundFileType.h
Lib/include/nelf/gfx/: gfxAttributeType.h  gfxCullMode.h  gfxDrawMode.h  gfxDriver.h  gfxFormatType.h  gfxGBuffer.h  gfxGBufferMode.h  gfxMath.h  gfxMaxCircleVertices.h  gfxMaxTextures.h  gfxObject.h  gfxObjectHeader.h  gfxObjectType.h  gfxRenderTarget.h  gfxShaderParams.h  gfxShaderProgram.h  gfxTexture.h  gfxTextureFilterType.h  gfxTextureFormat.h  gfxTextureMapType.h  gfxTextureWrapMode.h  gfxTransform.h  gfxVertexArray.h  gfxVertexData.h  gfxVertexIndex.h
Lib/include/nelf/gui/: Area.h  Button.h  CheckBox.h  Gui.h  Label.h  Picture.h  Screen.h  Slider.h  TextField.h  TextList.h  guiEvent.h  guiObjectHeader.h
Lib/include/nelf/pak/: Pak.h  nameLength.h  pakVersion.h
Lib/include/nelf/physics/: Joint.h  PhysicsTriMesh.h  PhysicsWorld.h  jointType.h
Lib/include/nelf/resource/: Material.h  Model.h  Network.h  Resource.h  Resources.h  Scene.h  Script.h  resourceHeader.h  textureDataFormat.h  textureType.h
Lib/source/: Color.cpp  Config.cpp  Context.cpp  Directory.cpp  Engine.cpp  Face.cpp  Font.cpp  General.cpp  Image.cpp  Ipo.cpp  List.cpp  Log.cpp  Math.cpp  MeshData.cpp  Object.cpp  PostProcess.cpp  Property.cpp  RenderStation.cpp  Scripting.cpp  String.cpp  StringStream.cpp  StringStream.h  Vector.cpp  Version.cpp
Lib/source/actor/: Actor.cpp  Camera.cpp  Entity.cpp  Light.cpp  Particle.cpp  Particles.cpp  Sprite.cpp
Lib/source/audio/: AudioDevice.cpp  AudioSource.cpp  DataDump.cpp  DataDump.h  Sound.cpp
Lib/source/bind/: BindAudio.cpp  BindAudio.h  BindColor.cpp  BindColor.h  BindConfig.cpp  BindConfig.h  BindDirectory.cpp  BindDirectory.h  BindGui.cpp  BindGui.h  BindList.cpp  BindList.h  BindNetwork.cpp  BindNetwork.h  BindObject.cpp  BindObject.h  BindUtil.cpp  BindUtil.h  BindVec.cpp  BindVec.h  Binds.cpp
Lib/source/gfx/: gfxDriver.cpp  gfxGBuffer.cpp  gfxGeneral.cpp  gfxGeneral.h  gfxMath.cpp  gfxObject.cpp  gfxQuery.cpp  gfxRenderTarget.cpp  gfxShaderGen.cpp  gfxShaderParams.cpp  gfxShaderProgram.cpp  gfxTexture.cpp  gfxTransform.cpp  gfxVertexArray.cpp  gfxVertexData.cpp  gfxVertexIndex.cpp
Lib/source/gui/: Button.cpp  CheckBox.cpp  Gui.cpp  Label.cpp  Picture.cpp  Screen.cpp  Slider.cpp  TextField.cpp  TextList.cpp
Lib/source/pak/: Pak.cpp  PakIndex.cpp
Lib/source/physics/: Collision.cpp  Joint.cpp  PhysicsObject.cpp  PhysicsTriMesh.cpp  PhysicsWorld.cpp
Lib/source/resource/: Armature.cpp  Material.cpp  Model.cpp  Network.cpp  Resource.cpp  Resources.cpp  Scene.cpp  Script.cpp  Texture.cpp
Test/: CMakeLists.txt
Test/data/: Readme.md  balls.pak  demo1.pak
Test/source/: Audio.cpp  Gfx.cpp  Main.cpp  Pak.cpp
Util/: Readme.md  blender25_pak_exporter_fast.py  blender_pak_exporter_fast.py  bundle.sh  genwraps.py
doc/: Lesson1.md  Lesson3.md  Lesson4.md  Readme.md
doc/demo/: Readme.md
include/nelf/: Actor.h  Armature.h  Color.h  Config.h  Context.h  Directory.h  Engine.h  Entity.h  FramePlayer.h  General.h  Image.h  Ipo.h  List.h  Log.h  Math.h  Model.h  Object.h  Particle.h  PostProcess.h  Property.h  Resource.h  Resources.h  Script.h  Scripting.h  Sprite.h  StringStream.h  Texture.h  Timer.h  Vector.h  Version.h  actorHeader.h  bezierCurveType.h  blendelf.h  cameraMode.h  context.h  default.h  directoryItemType.h  drawMode.h  engine.h  errorCode.h  (+27 more)
include/nelf/bind/: Bind.h
source/: Actor.cpp  Armature.cpp  Audio.cpp  Camera.cpp  Color.cpp  Config.cpp  Context.cpp  Directory.cpp  Engine.cpp  Font.cpp  FramePlayer.cpp  General.cpp  Gui.cpp  Image.cpp  Ipo.cpp  Log.cpp  Main.cpp  Material.cpp  MeshData.cpp  Model.cpp  Object.cpp  Particle.cpp  Particles.cpp  PostProcess.cpp  Property.cpp  Random.cpp  RenderStation.cpp  Resource.cpp  Resources.cpp  Scripting.cpp  Sprite.cpp  String.cpp  StringStream.cpp  Texture.cpp  Timer.cpp  Vector.cpp  Vertex.cpp  binds.cpp  blendelf.cpp  physics.cpp  (+1 more)
source/actor/: Actor.cpp  Camera.cpp  Entity.cpp  Light.cpp  Particles.cpp  Sprite.cpp
source/audio/: AudioDevice.cpp  AudioSource.cpp  Sound.cpp
source/bind/: Binds.cpp
source/dirent/: dirent.h
source/gfx/: gfx.cpp  gfxDriver.cpp  gfxGBuffer.cpp  gfxQuery.cpp  gfxRenderTarget.cpp  gfxShaderGen.cpp  gfxShaderParams.cpp  gfxShaderProgram.cpp  gfxTexture.cpp  gfxTransform.cpp  gfxVertexArray.cpp  gfxVertexData.cpp
source/gui/: Button.cpp  CheckBox.cpp  Gui.cpp  GuiObject.cpp  Label.cpp  Picture.cpp  Screen.cpp  Slider.cpp  TextField.cpp  TextList.cpp
source/pak/: Pak.cpp
source/physics/: Collision.cpp  Joint.cpp  MultipleRayResultCallback.cpp  PhysicsObject.cpp  PhysicsTriMesh.cpp  PhysicsWorld.cpp
source/resource/: Armature.cpp  Material.cpp  Model.cpp  Network.cpp  Resources.cpp  Scene.cpp  Script.cpp
(+92 files in other folders)
